--- a/3-Tier Architecture/BLL/BLL.csproj
+++ b/3-Tier Architecture/BLL/BLL.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="DTOs\PersonDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\PersonService.cs" />
   </ItemGroup>
