dependency inversion implement

--- a/3-Tier Architecture/DAL/DAL.csproj
+++ b/3-Tier Architecture/DAL/DAL.csproj
@@ -52,8 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Course.cs" />
+    <Compile Include="DataAccessFactory.cs" />
     <Compile Include="EF\Models\Person.cs" />
     <Compile Include="EF\PContext.cs" />
+    <Compile Include="Interfaces\IRepo.cs" />
     <Compile Include="Migrations\202312150953163_initdb.cs" />
     <Compile Include="Migrations\202312150953163_initdb.designer.cs">
       <DependentUpon>202312150953163_initdb.cs</DependentUpon>
@@ -61,6 +64,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\PersonRepo.cs" />
+    <Compile Include="Repos\Repo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
